# flip-benchmarks

./: .gitignore  README.md  benchmark_results.json  benchmark_results_2.json  benchmarks.py  plot.html  plot.py  plot2.html  plot2.py  prof_results
1_TensorIterator_Exploration/: CMakeLists.txt  flip.cpp  flip.h  main.cpp
2_Multidimensional_serial/: flip.cpp  flip.h  indices.py  main.cpp
3_Multidimensional_parallel/: main.cpp
4_AdvancedIndexing/: CMakeLists.txt  flip.cpp  main.cpp
5_Stable_implementation/: CMakeLists.txt  benchmarks.py  flip.cpp  main.cpp  plot.py
6_PyTorch_benchmark/: benchmarks.py  plot.py
7_Parallel_benchmark/: benchmarks.py  plot.py
benchmarking/: benchmarks.py  plot2.py
